switch to 2.x branch

--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@
         <p>Drupal, Phing, Build, Continous Integration, Continous Delivery</p>
         <p class="view"><a href="https://github.com/goruha/drupal_phing">View the Project on GitHub <small>goruha/drupal_phing</small></a></p>
         <ul>
-          <li><a href="https://github.com/goruha/drupal_phing/zipball/master">Download <strong>ZIP File</strong></a></li>
-          <li><a href="https://github.com/goruha/drupal_phing/tarball/master">Download <strong>TAR Ball</strong></a></li>
+          <li><a href="https://github.com/goruha/drupal_phing/zipball/2.x">Download <strong>ZIP File</strong></a></li>
+          <li><a href="https://github.com/goruha/drupal_phing/tarball/2.x">Download <strong>TAR Ball</strong></a></li>
           <li><a href="https://github.com/goruha/drupal_phing">View On <strong>GitHub</strong></a></li>
         </ul>
       </header>
